# jimeng_image_mcp

./: .gitignore  README.md  SUMMARY.md  claude_desktop_config.json  cos_examples.py  cos_optimized.py  env_example.txt  example_usage.py  jimeng_image_server.py  llms-full.txt  mcp_server_http.py  pyproject.toml  requirements.txt  run_server.py  test_cos_upload.py
